# bdr

./: .gitignore  LineError.py  README.md  bdr.bash  calibrate.bash  dockerfile  pid_example.py  run-docker.sh  script.py
bdr-simulator/: index.html  sim.html
bdr-simulator/css/: main.css
bdr-simulator/js/: BCIDevice.build.js  main.js  submit.js  validate.js
bdr_ws/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
bdr_ws/src/bebop_openai/bebop_bdr_qlearn/: CMakeLists.txt  package.xml
bdr_ws/src/bebop_openai/bebop_bdr_qlearn/config/: bebop_bdr_qlearn_params.yaml
bdr_ws/src/bebop_openai/bebop_bdr_qlearn/launch/: start_training.launch
bdr_ws/src/bebop_openai/bebop_bdr_qlearn/scripts/: bebop_bdr.py  bebop_env.py  qlearner.py  robot_ros_env.py  start_qlearning.py  test.py
bdr_ws/src/bebop_openai/bebop_bdr_qlearn/training_results/: openaigym.episode_batch.0.123111.stats.json  openaigym.episode_batch.0.16780.stats.json  openaigym.episode_batch.0.35229.stats.json  openaigym.episode_batch.0.39573.stats.json  openaigym.episode_batch.0.4428.stats.json  openaigym.episode_batch.0.59538.stats.json  openaigym.episode_batch.0.7192.stats.json  openaigym.manifest.0.123111.manifest.json  openaigym.manifest.0.16780.manifest.json  openaigym.manifest.0.35229.manifest.json  openaigym.manifest.0.39573.manifest.json  openaigym.manifest.0.4428.manifest.json  openaigym.manifest.0.51980.manifest.json  openaigym.manifest.0.59538.manifest.json  openaigym.manifest.0.7192.manifest.json  qresults.pkl
bdr_ws/src/bebop_training/bebop_training/: CMakeLists.txt  package.xml
bdr_ws/src/bebop_training/bebop_training/src/launch/: start_training.launch
bdr_ws/src/bebop_training/bebop_training/src/scripts/: start_qlearning.py
devel/: .catkin  .rosinstall  setup.sh
gym-bdr/: setup.py
gym-bdr/gym_bdr/: __init__.py
gym-gazebo/gym_gazebo/: __init__.py
install/: _setup_util.py
src/bebop_brain_drone_race/: CMakeLists.txt  (+1 more)
(+150 files in other folders)
