<?xml version="1.0"?>
<package>
  <name>bebop_bdr_qlearn</name>
  <version>0.0.0</version>
  <description>Bebop Brain-Drone Race Q-Learning Package</description>
  
  <maintainer email="lcbentley@crimson.ua.edu">Landon Bentley</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>openai_ros</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>openai_ros</run_depend>
  <run_depend>rospy</run_depend>

  <export></export>
</package>
